[package]
name = "ibus-dl"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Artur Kovacs <kovacs.artur.barnabas@gmail.com>"]
repository = "https://github.com/ArturKovacs/ibus-dl"
description = "Loads IBus at runtime"
readme = "Readme.md"
keywords = ["ime"]
edition = "2021"

[dependencies]
dlib = "0.5"
once_cell = "1.9"
